--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - db
     image: wordpress:latest
     volumes:
-      - wordpress_data:/var/www/html
+      - ./:/var/www/html/wp-content/plugins/wp-crypto-plugin
     ports:
       - 8000:80
     restart: always
@@ -28,4 +28,3 @@ services:
       WORDPRESS_DB_NAME: wordpress
 volumes:
   db_data: {}
-  wordpress_data: {}
