--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,16 +15,9 @@ services:
   wordpress:
     depends_on:
       - db
-    image: wordpress:latest
-    volumes:
-      - ./:/var/www/html/wp-content/plugins/wp-crypto-plugin
+    build: .
     ports:
       - 8000:80
     restart: always
-    environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
 volumes:
   db_data: {}
